--- a/.env-sample
+++ b/.env-sample
@@ -1,3 +1,9 @@
+# Tax Provider Basic Auth Username/Password
+# See https://developer.bigcommerce.com/api-docs/providers/tax#establishing-a-connection
+TAX_PROVIDER_USERNAME=
+TAX_PROVIDER_PASSWORD=
+TAX_PROVIDER_ID=
+
 # Get the Client ID and Secret from the Developer Portal
 # https://developer.bigcommerce.com/api-docs/apps/quick-start#register-a-draft-app
 
