--- a/.env-sample
+++ b/.env-sample
@@ -1,7 +1,10 @@
-# Tax Provider Basic Auth Username/Password
+# Tax Provider Basic Auth Username/Password - do not use any colons
 # See https://developer.bigcommerce.com/api-docs/providers/tax#establishing-a-connection
 TAX_PROVIDER_USERNAME=
 TAX_PROVIDER_PASSWORD=
+
+# Tax Provider ID
+# https://developer.bigcommerce.com/api-docs/providers/tax#sharing-provider-details-with-bigcommerce
 TAX_PROVIDER_ID=
 
 # Get the Client ID and Secret from the Developer Portal
