--- a/package.json
+++ b/package.json
@@ -23,8 +23,9 @@
     "@bigcommerce/big-design-theme": "^0.13.1",
     "firebase": "^9.5.0",
     "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.21",
     "mysql": "^2.18.1",
-    "next": "^11.1.1",
+    "next": "^11.1.3",
     "node-bigcommerce": "github:bigcommerce/node-bigcommerce",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
